Downgrade java to java11